# bill-settler

./: .gitignore  compose.yaml  package-lock.json  readme.md  skaffold.yaml
bill-settler-app/: package-lock.json  package.json  tailwind.config.js
bill-settler-app/data/: db.json
bill-settler-app/src/: App.tsx  index.css  index.tsx
bill-settler-app/src/components/before/: Layout.tsx  Login.tsx
bill-settler-app/src/components/common/: AddExpenseButton.tsx  Balance.tsx  Expense.tsx  Gap.tsx  HomeButtons.tsx  ProfileIcon.tsx  SettleUpButton.tsx
bill-settler-app/src/components/detailed_expense/: DetailedExpense.tsx
bill-settler-app/src/components/expenses/: Expenses.tsx  ExpensesContainer.tsx
bill-settler-app/src/components/groups/: AddGroupCard.tsx  Group.tsx  GroupCard.tsx  GroupContainer.tsx  Groups.tsx  GroupsContainer.tsx
bill-settler-app/src/components/home/: Balance.tsx  Home.tsx  HomeContainer.tsx
bill-settler-app/src/components/menu/: MenuElement.tsx  Profile.tsx  SideBar.tsx  SmallProfile.tsx
bill-settler-app/src/components/new_expense/: NewExpense.tsx
bill-settler-app/src/components/new_group/: NewGroup.tsx
bill-settler-app/src/components/playground/: Playground.tsx
bill-settler-app/src/lib/: client.ts  types.ts
bill-settler-app/src/model/: Expense.tsx  Group.tsx  Profile.tsx
bill-settler-app/src/stores/: client.ts
bill-settler-backend/: Cargo.toml  Dockerfile  README.md
bill-settler-backend/api/: Cargo.toml
bill-settler-backend/api/src/: main.rs
bill-settler-backend/api/src/routes/: mod.rs
bill-settler-backend/api/src/routes/groups/: mod.rs
bill-settler-backend/api/src/routes/users/: mod.rs
bill-settler-backend/bill-settler-db/: Cargo.toml
bill-settler-backend/bill-settler-db/src/: db_client.rs  error.rs  main.rs  utils.rs
bill-settler-backend/bill-settler-db/src/edges/: date_props.rs  knows.rs  mod.rs  trusts.rs
bill-settler-backend/database/: Cargo.toml
bill-settler-backend/database/database-macro/: Cargo.toml
bill-settler-backend/database/database-macro/src/: db_edge.rs  db_label.rs  db_savable.rs  db_vertex.rs  enum_g_value.rs  lib.rs
bill-settler-backend/database/src/: date.rs  db_client.rs  edge.rs  entity.rs  error.rs  holder.rs  lib.rs  prop.rs  utils.rs  vertex.rs
bill-settler-backend/k8s/: backend.yaml
bill-settler-backend/models/: Cargo.toml
bill-settler-backend/models/src/: main.rs
bill-settler-backend/models/src/edges/: belongs_to.rs  created.rs  date_props.rs  is.rs  mod.rs  owes_expense_schema.rs  paid_expense.rs  trusts.rs
bill-settler-backend/models/src/vertices/: expense.rs  group.rs  group_person.rs  mod.rs  user.rs
bill-settler-backend/services/: Cargo.toml
bill-settler-backend/services/src/: lib.rs  main.rs  user_service.rs
janusgraph/: .dockerignore  Dockerfile
janusgraph/k8s/: janusgraph.yaml
(+10 files in other folders)
