[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
axum = { version = "0.6.15", features = ["http2", "macros", "headers"] }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
database = { path = "../database" }
database-macro = { path = "../database/database-macro" }
models = { path ="../models" }
services = { path="../services" }
http = "0.2.9"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
