[package]
name = "database"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gremlin-client = { version = "*", features = ["derive"] }
chrono = "*"
database-macro = { path = "database-macro" }
thiserror = "1.0.40"
anyhow = { version = "1.0.71", features = ["std"] }
