[package]
name = "models"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gremlin-client = { version = "*", features = ["derive"] }
serde = { version = "*", features = ["derive"] }
serde_json = "*"
database = { path = "../database" }
database-macro = { path = "../database/database-macro" }
typescript-type-def = "0.5.6"